--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,11 @@
       }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "/app.js" }
+      { "src": "/(.*)", "dest": "/app.js" },
+      {
+        "src": "/images/(.*)",
+        "dest": "/Public/Images/$1"
+      }
     ]
   }
   
