--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
     "routes": [
       { "src": "/(.*)", "dest": "/app.js" },
       {
-        "src": "/images/(.*)",
+        "src": "Images/(.*)",
         "dest": "/Public/Images/$1"
       }
     ]
